# TradeWinds

./: .gitignore  README.md
backend/: README.md  pyproject.toml
frontend/: package-lock.json  package.json
instructions/: project_instructions.md
